[package]
name = "quadtree-f32"
version = "0.1.0"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
edition = "2018"
description = "Simple, dependency-free ID-based quadtree"
repository = "https://github.com/fschutt/quadtree-f32"
keywords = ["tree", "algorithms", "spatial", "quadtree"]
categories = ["graphics", "algorithms"]
readme = "README.md"
license = "MIT"

[dependencies]
